add menu and animation comp
menu - menu.test
animation

--- a/src/components/styles/index.styl
+++ b/src/components/styles/index.styl
@@ -1,6 +1,12 @@
 // 通用变量
 @require '_variables'
 
+// 混合
+@require '_mixins'
+
+// 动画
+@require '_animation'
+
 // 游览器默认样式统一
 @require 'normalize'
 
@@ -9,3 +15,9 @@
 
 // 警告弹窗
 @require '../Alert/_style'
+
+// 菜单
+@require '../Menu/_style'
+
+// 图标
+@require '../Icon/_style'
